--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 ---
-layout:template.njk
-title:Iveta Círová
+layout: layouts/template.njk
+title: Iveta Círová
 ---
 
-<h1 class="title">Iveta Círová</h1>
+
+<sec class="about">
+
+  <h2 class="subtitle">O mě</h2>
+
+  <p class="description">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nihil
+    quaerat, voluptatibus vitae asperiores tempore dicta amet labore nostrum non
+    quibusdam quia reiciendis quas. Fuga ad nemo saepe magnam eaque veritatis
+    magni voluptatibus unde! Iusto unde, optio dolore debitis qui mollitia ipsum.
+    Ut cupiditate aperiam suscipit est, quisquam ea explicabo.
+  </p>
+
+  <img src="#" alt="ikona linkedin">
+  <img src="#" alt="ikona gitHub">
+
+</sec>
