--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@ title: Iveta Círová
 ---
 
 <section class="hero">
+
+  
   <h1 class="title title--hero">
     Iveta Círová
   </h1>
+
+  <div class="badge badge--header">Frontend &amp; QA</div>
 
   <p class="hero__description">
     Ne, vůbec nejsem workoholik. Prostě mě to baví.
@@ -33,15 +37,11 @@ title: Iveta Círová
   <p class="description">
     Vždy mě zajímaly weby. První zkušenosti v IT jsem získala manuálním
     testováním webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
-    kurz Jak se stát testerem. Poté kurz Automatizace v testování, kde jsem
+    kurz <a href="#" class="link">Jak se stát testerem</a>. Poté kurz <a href="#" class="link">Automatizace v testování</a>, kde jsem
     přičuchla k JavaScriptu. Byla jsem nadšená. Rozhodla jsem se dále
-    zabývat kódováním. Do světa frontend vývoje jsem se rychle zamilovala. Aktuálně navštěvuji kurz Javascriptu. Dalším krokem bude React. 
+    zabývat kódováním. Přihlásila jsem se do kurzu <a href="" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Aktuálně navštěvuji kurz <a href="" class="link">Javascriptu</a>. Dalším krokem bude React. 
   </p>
 
-  <div class="icons">
-    <a href="https://www.linkedin.com/in/iveta-c%C3%ADrov%C3%A1-b8638424a/" class="icon-link"><img src="/icons/linkedin_social_icon.svg" alt="ikona linkedin" class="icon-image" width="40px"/></a>
-    <a href="https://github.com/icirova" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="40px" /></a>
-    <!-- <a href=""><img src="/icons/twitter_social_icon.svg" alt="ikona twitter" /></a> -->
-  </div>
+  
 
 </section>
