--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ title: Iveta Círová
   <p class="description">
     Vždy mě zajímaly weby. První zkušenosti v IT jsem získala manuálním
     testováním webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
-    kurz <a href="#" class="link">Jak se stát testerem</a>. Poté kurz <a href="#" class="link">Automatizace v testování</a>, kde jsem
+    kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
     přičuchla k JavaScriptu. Byla jsem nadšená. Rozhodla jsem se dále
-    zabývat kódováním. Přihlásila jsem se do kurzu <a href="" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Aktuálně navštěvuji kurz <a href="" class="link">Javascriptu</a>. Dalším krokem bude React. 
+    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Aktuálně navštěvuji kurz <a href="/cv/#js" class="link">Javascriptu</a>. Dalším krokem bude React. Ve volném čase se věnuji digitální ilustraci.
   </p>
 
   
