--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@ title: Iveta Círová
     Iveta Círová
   </h1>
 
-  <div class="badge badge--header">Frontend &amp; QA</div>
+  <div class="badge badge--hero">Frontend &amp; QA</div>
 
   <p class="hero__description">
     Ne, vůbec nejsem workoholik. Prostě mě to baví.
   </p>
 
   <div class="buttons">
-    <button class="btn"><a class="btn-link" href="#">CV</a></button>
-    <button class="btn"><a class="btn-link" href="#">Projekty</a></button>
+    <button class="btn"><a class="btn-link" href="/cv/">CV</a></button>
+    <button class="btn"><a class="btn-link" href="/projekty/">Projekty</a></button>
   </div>
 
   <img
@@ -30,7 +30,7 @@ title: Iveta Círová
 </section>
 
 <section class="about">
-  <h2 class="subtitle">O mně</h2>
+  <h2 class="subtitle subtitle--header">O mně</h2>
 
   <p class="badge badge--about">HTML, CSS, JS</p>
 
