--- a/kontakt.html
+++ b/kontakt.html
@@ -2,3 +2,11 @@
 layout: layouts/template.njk
 title: Iveta Círová - Kontakt
 ---
+
+<section class="contact">
+
+    <h1 class="title">Kontakty</h1>
+
+    <p style="margin: 40px;">Zde budou kontakty.</p>
+
+</section>
