--- a/projekty.html
+++ b/projekty.html
@@ -16,7 +16,7 @@ title: Iveta Círová - Projekty
             
         </div>
 
-        <p class="card-description">Jedná se o webové stránky fiktivního sportovního klubu. Je to vícestránkový web, který je responzivní - má mobilní a PC verzi. Využívá generátor statických webů Eleventy, SASS, BEM a kolekce. Web je publikován přes hostingovou službu Netlify. Využívá redakční systém pro vkládání aktualit Netlify CMS.</p>
+        <p class="card-description">Jedná se o webové stránky fiktivního sportovního klubu. Je to vícestránkový web, který je responzivní - má mobilní a PC verzi. Využívá generátor statických webů Eleventy, SASS, BEM a kolekce. Web je publikován přes hostingovou službu Netlify. Využívá redakční systém pro vkládání aktualit Netlify CMS. Grafický návrh a wireframe jsem vyrobila ve Figmě.</p>
 
     </div>
 
@@ -35,7 +35,7 @@ title: Iveta Círová - Projekty
 
     </div>
 
-    <div class="card card--project">
+    <div class="card card--project card--inactive">
 
         <div class="card__header">
             <h2 class="subtitle subtitle--projects">ART blog</h2>
@@ -44,6 +44,18 @@ title: Iveta Círová - Projekty
         </div>
 
         <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických vebů Eleventy, kolekce pro práci se články. Bude publikován přes hostingovou službu Netlify a pro přidávání příspěvků bude využívat redakční systém Netlify CMS.  </p>
+
+    </div>
+
+    <div class="card card--project card--inactive">
+
+        <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Cestovka</h2>
+            <p class="badge">HTML, CSS, SASS</p>
+            <p class="card__date">in progress</p>
+        </div>
+
+        <p class="card-description ">Jedná se o úvodní stránku webu, kde se prodávají zájezdy. Projekt na procvičení CSS gridu, responzivního webdesignu, metodiky BEM, preprocessoru Sass a práce s garfickým návrhem - vyexportovaným z Adobe XD pro kurz Staň se kodérkou. </p>
 
     </div>
 
