navigace a mixin pro mq

--- a/projekty.html
+++ b/projekty.html
@@ -11,7 +11,7 @@ title: Iveta Círová - Projekty
 
         <div class="card__header">
             <h2 class="subtitle subtitle--projects">USAGI Dojo</h2>
-            <p class="badge badge">HTML, CSS, SASS</p>
+            <p class="badge">HTML, CSS, SASS</p>
             <p class="card__date"><a href="" target="" class="link">https://usagi-dojo.netlify.app/</a></p>
             
         </div>
@@ -19,8 +19,6 @@ title: Iveta Círová - Projekty
         <p class="card-description">Jedná se o webové stránky fiktivního sportovního klubu. Je to vícestránkový web, který je responzivní - má mobilní a PC verzi. Využívá generátor statických webů Eleventy, SASS, BEM a kolekce. Web je publikován přes hostingovou službu Netlify. Využívá redakční systém pro vkládání aktualit Netlify CMS. Grafický návrh a wireframe jsem vyrobila ve Figmě.</p>
 
     </div>
-
-    
 
     <div class="card card--project">
 
@@ -58,11 +56,5 @@ title: Iveta Círová - Projekty
         <p class="card-description ">Jedná se o úvodní stránku webu, kde se prodávají zájezdy. Projekt na procvičení CSS gridu, responzivního webdesignu, metodiky BEM, preprocessoru Sass a práce s garfickým návrhem - vyexportovaným z Adobe XD pro kurz Staň se kodérkou. </p>
 
     </div>
-
-
-
-
-
-
 
 </section>
