--- a/projekty.html
+++ b/projekty.html
@@ -12,7 +12,7 @@ title: Iveta Círová - Projekty
         <div class="card__header">
             <h2 class="subtitle subtitle--projects">USAGI Dojo</h2>
             <p class="badge">HTML, CSS, SASS</p>
-            <p class="card__date"><a href="" target="" class="link">https://usagi-dojo.netlify.app/</a></p>
+            <p class="card__date"><a href="https://usagi-dojo.netlify.app/" target="" class="link">https://usagi-dojo.netlify.app/</a></p>
             
         </div>
 
