--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Iveta Círová
 </section>
 
 <section class="about">
-  <h2 class="subtitle subtitle--header">O mně</h2>
+  <h2 class="subtitle subtitle--about">O mně</h2>
 
   <p class="badge badge--about">HTML, CSS, JS</p>
 
