--- a/projekty.html
+++ b/projekty.html
@@ -36,12 +36,12 @@ title: Iveta Círová - Projekty
     <div class="card card--project card--inactive">
 
         <div class="card__header">
-            <h2 class="subtitle subtitle--projects">ART blog</h2>
+            <h2 class="subtitle subtitle--projects">Nejen o akvarelu</h2>
             <p class="badge">HTML, CSS, SASS</p>
             <p class="card__date">in progress</p>
         </div>
 
-        <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických vebů Eleventy, kolekce pro práci se články. Bude publikován přes hostingovou službu Netlify a pro přidávání příspěvků bude využívat redakční systém Netlify CMS.  </p>
+        <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických webů Eleventy, kolekce pro práci se články. Bude publikován přes hostingovou službu Netlify a pro přidávání příspěvků bude využívat redakční systém Netlify CMS.  </p>
 
     </div>
 
