--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,18 @@ title: Iveta Círová - CV
 
   <h2 class="subtitle subtitle--resume">Kurzy</h2>
 
-    <div class="card">
+  <div class="card">
+    
+    <div class="card__header" id="figma">
+        <p class="badge badge--card">Figma UI/UX Design Essentials</p>
+        <p class="card__date">2023</p>
+        <p class="card__specialization">Udemy, D. W. Scott</p>
+    </div>
+    <p class="card__description">Seznámila jsem se s UX personou, naučila se dělat drátěné modely a vytvořit vlastní komponenty UI. Znám proměnné, pluginy a umím mikrointerace, přechody stránek a animace. Výsledkem jsou plně interaktivní prototypy. Získala jsem certifikát.</p>
+
+</div>
+  
+  <div class="card">
     
             <div class="card__header" id="js">
                 <p class="badge badge--card">JavaScript 100</p>
