--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,19 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Intearaktivní prototyp</h2>
+            <p class="badge">UX/UI</p>
+            <p class="card__date"><a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1 target=" class="link">link</a></p>
+            
+        </div>
+
+        <p class="card-description">Projekt pro kurz <span class="weight">Figma UI/UX Design Essentials</span>. Vytvořila jsem cvičný interaktivní prototyp v mobilní a desktopové verzi.</p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">USAGI Dojo</h2>
             <p class="badge">HTML, CSS, SASS</p>
             <p class="card__date"><a href="https://usagi-dojo.netlify.app/" target="" class="link">https://usagi-dojo.netlify.app/</a></p>
