--- a/cv.html
+++ b/cv.html
@@ -71,7 +71,7 @@ title: Iveta Círová - CV
         <p class="card__date">2023</p>
         <p class="card__specialization">Udemy, D. W. Scott</p>
     </div>
-    <p class="card__description">Seznámila jsem se s UX personou, naučila se dělat drátěné modely a vytvořit vlastní komponenty UI. Znám proměnné, pluginy a umím mikrointerace, přechody stránek a animace. Výsledkem jsou plně interaktivní prototypy. Získala jsem certifikát.</p>
+    <p class="card__description">Seznámila jsem se s UX personou, naučila se dělat drátěné modely a vytvořit vlastní komponenty UI. Znám proměnné, pluginy a umím vytvořit mikrointerace, přechody stránek a animace. Výsledkem jsou plně interaktivní prototypy. Získala jsem <a href="/certificate/cirova-certificat-figma.pdf" target="_blank" class="link">certifikát</a>.</p>
 
 </div>
   
