--- a/projekty.html
+++ b/projekty.html
@@ -10,13 +10,13 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
-            <h2 class="subtitle subtitle--projects">Intearaktivní prototyp</h2>
+            <h2 class="subtitle subtitle--projects">Figma</h2>
             <p class="badge">UX/UI</p>
-            <p class="card__date"><a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1 target=" class="link">link</a></p>
+            <p class="card__date"><a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1 target=" class="link">Ecom V1</a></p>
             
         </div>
 
-        <p class="card-description">Projekt pro kurz <span class="weight">Figma UI/UX Design Essentials</span>. Vytvořila jsem cvičný interaktivní prototyp v mobilní a desktopové verzi.</p>
+        <p class="card-description">Projekt pro kurz <span class="weight">Figma UI/UX Design Essentials</span>. Vytvořila jsem cvičný wireframe a interaktivní prototyp v mobilní a desktopové verzi.</p>
 
     </div>
 
@@ -58,16 +58,5 @@ title: Iveta Círová - Projekty
 
     </div>
 
-    <div class="card card--project card--inactive">
-
-        <div class="card__header">
-            <h2 class="subtitle subtitle--projects">Cestovka</h2>
-            <p class="badge">HTML, CSS, SASS</p>
-            <p class="card__date">in progress</p>
-        </div>
-
-        <p class="card-description ">Jedná se o úvodní stránku webu, kde se prodávají zájezdy. Projekt na procvičení CSS gridu, responzivního webdesignu, metodiky BEM, preprocessoru Sass a práce s garfickým návrhem - vyexportovaným z Adobe XD pro kurz Staň se kodérkou. </p>
-
-    </div>
 
 </section>
