přidán projekt nejen-o-akvarelu

--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,18 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Nejen o akvarelu</h2>
+            <p class="badge">HTML, CSS, SASS</p>
+            <p class="card__date"><a href="https://nejen-o-akvarelu.cirova.cz/" target="" class="link">nejen-o-akvarelu.cirova.cz</a></p>
+        </div>
+
+        <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických webů Eleventy, kolekce pro práci se články. Je publikován přes hostingovou službu Netlify. Na tomto projektu ještě pracuji. </p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">Figma</h2>
             <p class="badge">UX/UI</p>
             <p class="card__date"><a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1 target=" class="link">Ecom V1</a></p>
@@ -46,17 +58,7 @@ title: Iveta Círová - Projekty
 
     </div>
 
-    <div class="card card--project card--inactive">
-
-        <div class="card__header">
-            <h2 class="subtitle subtitle--projects">Nejen o akvarelu</h2>
-            <p class="badge">HTML, CSS, SASS</p>
-            <p class="card__date">in progress</p>
-        </div>
-
-        <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických webů Eleventy, kolekce pro práci se články. Bude publikován přes hostingovou službu Netlify a pro přidávání příspěvků bude využívat redakční systém Netlify CMS.  </p>
-
-    </div>
+    
 
 
 </section>
