js efekt na tlačítkách

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ title: Iveta Círová
   </p>
 
   <div class="buttons">
-    <button class="btn"><a class="btn-link" href="/cv/">CV</a></button>
-    <button class="btn"><a class="btn-link" href="/projekty/">Projekty</a></button>
+    <button id="btn-cv" class="btn"> CV</button>
+    <button id="btn-projects" class="btn"> Projekty</button>
   </div>
 
   <img
