--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ title: Iveta Círová
 
   <div class="badge badge--hero">Frontend &amp; QA</div>
 
-  <p class="hero__description">
-    Ne, vůbec nejsem workoholik. Prostě mě to baví.
-  </p>
+  <p class="hero__description">„Kódování s vášní, design s precizností.”</p>
 
   <div class="buttons">
     <button id="btn-cv" class="btn"> CV</button>
@@ -36,10 +34,10 @@ title: Iveta Círová
 
   <p class="description">
     Vždy mě zajímaly weby. První zkušenosti v IT jsem získala manuálním
-    testováním webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
+    <strong>testováním</strong> webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
     kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
-    přičuchla k JavaScriptu. Byla jsem nadšená. Rozhodla jsem se dále
-    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Aktuálně navštěvuji kurz <a href="/cv/#js" class="link">Javascriptu</a>. Dalším krokem bude React. Ve volném čase se věnuji digitální ilustraci.
+    se seznámila s JavaScriptem. Byla jsem nadšená. Rozhodla jsem se dále
+    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Znalosti <strong>JavaScriptu</strong> si nyní rozšiřuji studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Ve volném čase se věnuji digitální ilustraci.
   </p>
 
   
