--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@ title: Iveta Círová - CV
                 <p class="badge badge--card">Rekvalifikace do IT</p>
                 <p class="card__date">2020 - soušasnost</p>
             </div>
-            <p class="card__description">Začínala jsem samostudiem <span class="weight">webdesignu a počítačové grafiky</span>, na rodičovské dovolené jsem manuálně testovala weby a e-shopy. Absolvovala jsem kurzy zaměřené na <span class="weight">manuální i automatizované testování</span>. Rozhodla jsme se zaměřit na frontend vývoj - <span class="weight">HTML, CSS, JavaScript</span> a do budoucna React. Abych získala zkušenosti pracuji na <span class="weight">osobních projektech</span>, kde se seznamuji s dalšími technologiemi. Aktuálně např. Bootstrap a SASS.</p>
+            <p class="card__description">Začínala jsem samostudiem <span class="weight">webdesignu a počítačové grafiky</span>, na rodičovské dovolené jsem manuálně testovala weby a e-shopy. Absolvovala jsem kurzy zaměřené na <span class="weight">manuální i automatizované testování</span>. Rozhodla jsme se zaměřit na frontend vývoj - <span class="weight">HTML, CSS, JavaScript a React</span>. Abych získala zkušenosti pracuji na <span class="weight">osobních projektech</span>, kde se seznamuji s dalšími technologiemi. Aktuálně např. Docker, Node.JS, PostgreSQL.</p>
         </div>
 
 
