--- a/cv.html
+++ b/cv.html
@@ -147,6 +147,7 @@ title: Iveta Círová - CV
 
     <div class="skills">
 
+        <p class="badge">GIT</p>
         <p class="badge">HTML</p>
         <p class="badge">CSS</p>
         <p class="badge">JavaScript</p>
@@ -155,6 +156,7 @@ title: Iveta Círová - CV
         <p class="badge">Software testing</p>
         <p class="badge">Test Planning</p>
         <p class="badge">MySQL</p>
+        <p class="badge">PostgreS</p>
         <p class="badge">JIRA</p>
         <p class="badge">TestRail</p>
         <p class="badge">Figma</p>
