--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Iveta Círová
 
   <div class="badge badge--hero">Frontend &amp; QA</div>
 
-  <p class="hero__description">„Kódování s vášní, design s precizností.”</p>
+  <!-- <p class="hero__description">„Kódování s nadšením, design s precizností.”</p> -->
+  <p class="hero__description">„Snaha je prvním krokem k úspěchu.”</p>
 
   <div class="buttons">
     <button id="btn-cv" class="btn"> CV</button>
