--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Iveta Círová
   </div>
 
   <img
-    src="/images/profil-foto2.png"
+    src="/images/profilove-foto2.webp"
     alt="profilové foto"
     class="hero__image"
     width="300px"
