--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Iveta Círová
 <section class="about">
   <h2 class="subtitle subtitle--about">O mně</h2>
 
-  <p class="badge badge--about">HTML, CSS, JS</p>
+  <p class="badge badge--about">HTML, CSS, JS, REACT</p>
 
   <p class="description">
     Vždy mě zajímaly weby. První zkušenosti v IT jsem získala manuálním
