--- a/projekty.html
+++ b/projekty.html
@@ -59,7 +59,7 @@ title: Iveta Círová - Projekty
 
         <div class="card__header">
             <h2 class="subtitle subtitle--projects">USAGI Dojo</h2>
-            <p class="badge">HTML, CSS, SASS</p>
+            <p class="badge">HTML, CSS, SASS, JS</p>
             <div class="icons">
                 <a href="https://usagi-dojo.netlify.app/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
                 <a href="https://github.com/icirova/USAGI-Dojo" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
