--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,37 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Turistický deník</h2>
+            <p class="badge">REACT</p>
+            <div class="icons">
+                <a href="https://tourist-diary.netlify.app/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
+                <a href="https://github.com/icirova/tourist-diary" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
+            </div>
+        </div>
+
+        <p class="card-description ">Webová aplikace k zaznamenávání navštívených turistických míst. Bude napojená na databázi firebase. Na této aplikaci ještě pracuji. </p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Dnešní menu</h2>
+            <p class="badge">HTML, CSS, SASS, JS</p>
+            <div class="icons">
+                <a href="https://menu-planner.netlify.app/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
+                <a href="https://github.com/icirova/todays-menu" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
+            </div>
+            
+        </div>
+
+        <p class="card-description">Jedná se o responzivní stránky pro plánování jídelníčku. Na tomto projektu se seznamuji s prací na backendu. Odkaz na github <a href="https://github.com/icirova/todays-menu-BE" class="link">zde.</a></p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">Nejen o akvarelu</h2>
             <p class="badge">HTML, CSS, SASS, JS</p>
             <div class="icons">
@@ -19,23 +50,6 @@ title: Iveta Círová - Projekty
         </div>
 
         <p class="card-description ">Responzivní blog o akvarelu a perokresbě. Využívá generátor statických webů Eleventy, kolekce pro práci se články. Obrázky v sekci Inspirace jsou náhodně generovány a zobrazovány na stránce JavaScriptem.</p>
-
-    </div>
-
-
-    <div class="card card--project">
-
-        <div class="card__header">
-            <h2 class="subtitle subtitle--projects">Fotogalerie</h2>
-            <p class="badge">HTML, CSS, SASS, JS</p>
-            <div class="icons">
-                <a href="https://expanding-cards-gallery.cirova.cz/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
-                <a href="https://github.com/icirova/expanding-cards-gallery" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
-            </div>
-            
-        </div>
-
-        <p class="card-description">Miniprojekt inspirovaný kurzem<span class="weight"> 50 Projects in 50 Days</span> na Udemy. Vytvořila jsem responzivní minigalerii fotografií z dovolené s „expandujícím” efektem.</p>
 
     </div>
 
