--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@ title: Iveta Círová
     <strong>testováním</strong> webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
     kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
     se seznámila s JavaScriptem. Byla jsem nadšená. Rozhodla jsem se dále
-    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala. Znalosti <strong>JavaScriptu</strong> si nyní rozšiřuji studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Ve volném čase se věnuji digitální ilustraci.
+    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala.
+  </p>
+
+  <p class="description">
+    Znalosti <strong>JavaScriptu</strong> si nyní rozšiřuji studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, PostgreSQL, Firebase, Vite.js.
+  </p>
+
+  <p class="description">
+    Ve volném čase se věnuji digitální ilustraci a cvičení Kendó.
   </p>
 
   
