aktualizace projektu todays menu

--- a/projekty.html
+++ b/projekty.html
@@ -34,7 +34,7 @@ title: Iveta Círová - Projekty
             
         </div>
 
-        <p class="card-description">Jedná se o responzivní stránky pro plánování jídelníčku. Na tomto projektu se seznamuji s prací na backendu. Odkaz na github <a href="https://github.com/icirova/todays-menu-BE" class="link">zde.</a></p>
+        <p class="card-description">Jedná se o responzivní stránky pro plánování jídelníčku. Na tomto projektu se seznamuji s prací na backendu. Odkaz na backend na github <a href="https://github.com/icirova/todays-menu-BE" class="link">zde.</a></p>
 
     </div>
 
