přidán projekt Lovecký zámeček

--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,20 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Lovecký zámeček Brendy</h2>
+            <p class="badge">REACT</p>
+            <div class="icons">
+                <a href="https://github.com/icirova/hotel-lovecky-zamecek" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
+            </div>
+        </div>
+
+        <p class="card-description ">Responzivní webové stránky fiktivního hotelu. Projekt bude napojen na databázi PostgreSql.  Backend bude v Typescriptu. Na této aplikaci ještě pracuji. </p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">Turistický deník</h2>
             <p class="badge">REACT</p>
             <div class="icons">
