aktualizace projektu lovecky-zamecek

--- a/projekty.html
+++ b/projekty.html
@@ -17,7 +17,7 @@ title: Iveta Círová - Projekty
             </div>
         </div>
 
-        <p class="card-description ">Responzivní webové stránky fiktivního hotelu. Projekt bude napojen na databázi PostgreSql.  Backend bude v Typescriptu. Na této aplikaci ještě pracuji. </p>
+        <p class="card-description ">Responzivní webové stránky fiktivního hotelu. Projekt je napojen na databázi PostgreSql. Backend je napsaný v JavaScriptu s využitím frameworku Express.js. Bude nasaditelný v Dockeru - na tom ještě pracuji. Odkaz na backend na github <a href="https://github.com/icirova/hotel-lovecky-zamecek-BE" class="link">zde.</a></p>
 
     </div>
 
@@ -32,7 +32,7 @@ title: Iveta Círová - Projekty
             </div>
         </div>
 
-        <p class="card-description ">Webová aplikace k zaznamenávání navštívených turistických míst. Bude napojená na databázi firebase. Na této aplikaci ještě pracuji. </p>
+        <p class="card-description ">Webová aplikace k zaznamenávání navštívených turistických míst. Bude napojená na databázi PostgreSql. Na této aplikaci ještě pracuji. </p>
 
     </div>
 
