přidán aktuální projekt menu-planner

--- a/projekty.html
+++ b/projekty.html
@@ -24,6 +24,21 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">Dnešní menu</h2>
+            <p class="badge">REACT</p>
+            <div class="icons">
+                <a href="https://menu-planner.netlify.app/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
+                <a href="https://github.com/icirova/menu-planner" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
+            </div>
+        </div>
+
+        <p class="card-description ">Responzivní webové stránky pro plánování týdenního jídelníčku. Projekt bude napojen na databázi PostgreSql. Na tomto projektu ještě pracuji.</p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">Turistický deník</h2>
             <p class="badge">REACT</p>
             <div class="icons">
