--- a/projekty.html
+++ b/projekty.html
@@ -32,7 +32,7 @@ title: Iveta Círová - Projekty
             </div>
         </div>
 
-        <p class="card-description ">Responzivní webové stránky pro plánování týdenního jídelníčku. Projekt bude napojen na databázi PostgreSql. Na tomto projektu ještě pracuji.</p>
+        <p class="card-description ">Responzivní webové stránky pro plánování týdeního jídelníčku. Projekt bude napojen na databázi PostgreSql. Na tomto projektu ještě pracuji.</p>
 
     </div>
 
