--- a/cv.html
+++ b/cv.html
@@ -61,7 +61,7 @@ title: Iveta Círová - CV
         <p class="card__date">2/2024</p>
         <p class="card__specialization">Kodim.cz, Eva Machová</p>
     </div>
-    <p class="card__description">Kurz obsahuje základy jazyka TypeScript, doporučené postupy pro vývoj webových aplikací, základy parametrických typů, nastavení projektu a jak použít TypeScript v Reactu.</p>
+    <p class="card__description">Kurz obsahuje základy jazyka TypeScript, doporučené postupy pro vývoj webových aplikací, základy parametrických typů, nastavení projektu a jak použít TypeScript v Reactu. Získala jsem <a href="/certificate/cirova-certificat-ts.pdf" target="_blank" class="link">certifikát</a>.</p>
     
   </div>
   
