--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ title: Iveta Círová
 
   <div class="badge badge--hero">Frontend &amp; QA</div>
 
-  <!-- <p class="hero__description">„Kódování s nadšením, design s precizností.”</p> -->
   <p class="hero__description">„Snaha je prvním krokem k úspěchu.”</p>
 
   <div class="buttons">
@@ -46,7 +45,11 @@ title: Iveta Círová
   </p>
 
   <p class="description">
-    Ve volném čase se věnuji digitální ilustraci a cvičení Kendó.
+    Mým cílem je stát se <strong>Frontend vývojařem</strong> s přesahem do <strong>QA</strong>. 
+  </p>
+
+  <p class="description">
+    Ve volném čase se věnuji digitální ilustraci a lukostřelbě.
   </p>
 
   
