--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,20 @@ title: Iveta Círová - Projekty
     <div class="card card--project">
 
         <div class="card__header">
+            <h2 class="subtitle subtitle--projects">WebdriverIO</h2>
+            <p class="badge">JS</p>
+            <div class="icons">
+                <a href="https://github.com/icirova/automation-tester-example" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
+            </div>
+        </div>
+
+        <p class="card-description ">Jedná se o příklad k pohovoru na pozici Automation Tester. Naprogramovala jsem automatizované testy ve frameworku WebdriverIO dle zadání.</p>
+
+    </div>
+
+    <div class="card card--project">
+
+        <div class="card__header">
             <h2 class="subtitle subtitle--projects">Lovecký zámeček Brendy</h2>
             <p class="badge">REACT</p>
             <div class="icons">
