--- a/projekty.html
+++ b/projekty.html
@@ -17,7 +17,7 @@ title: Iveta Círová - Projekty
             </div>
         </div>
 
-        <p class="card-description ">Jedná se o příklad k pohovoru na pozici Automation Tester. Naprogramovala jsem automatizované testy ve frameworku WebdriverIO dle zadání.</p>
+        <p class="card-description ">Jedná se o příklad k pohovoru na pozici Automation Tester. Naprogramovala jsem automatizované testy ve frameworku WebdriverIO dle zadání ⟮viz README.md v projektu⟯.</p>
 
     </div>
 
