--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Iveta Círová
     Iveta Círová
   </h1>
 
-  <div class="badge badge--hero">Frontend &amp; QA</div>
+  <div class="badge badge--hero">QA &amp; Frontend</div>
 
   <p class="hero__description">„Snaha je prvním krokem k úspěchu.”</p>
 
@@ -30,22 +30,21 @@ title: Iveta Círová
 <section class="about">
   <h2 class="subtitle subtitle--about">O mně</h2>
 
-  <p class="badge badge--about">HTML, CSS, JS, REACT</p>
+  <p class="badge badge--about">JS, TS, REACT</p>
 
   <p class="description">
-    Vždy mě zajímaly weby. První zkušenosti v IT jsem získala manuálním
+    První zkušenosti v IT jsem získala manuálním
     <strong>testováním</strong> webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
     kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
-    se seznámila s JavaScriptem. Byla jsem nadšená. Rozhodla jsem se dále
-    zabývat kódováním. Přihlásila jsem se do kurzu <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát. Do světa frontend vývoje jsem se rychle zamilovala.
+    se seznámila s JavaScriptem. Byla jsem nadšená. Kromě QA jsem se tedy rozhodla zabývat také frontendovým vývojem. Začala jsem kurzem <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát.
   </p>
   
   <p class="description">
-    Znalosti <strong>JavaScriptu</strong> si nyní rozšiřuji studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, PostgreSQL, Firebase, Vite.js.
+    Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux.
   </p>
 
   <p class="description">
-    Mým cílem je stát se <strong>Frontend vývojařem</strong> s přesahem do <strong>QA</strong>. 
+    Mým cílem je stát se <strong>QA inženýrem</strong> s přesahem do <strong>frontendu</strong>. 
   </p>
 
   <p class="description">
