--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Iveta Círová
   </p>
   
   <p class="description">
-    Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux.
+    Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux. Začínám programovat v C# a na denně využívám AI - ChatGPT a Gemini.
   </p>
 
   <p class="description">
@@ -48,7 +48,6 @@ title: Iveta Círová
   </p>
 
   <p class="description">
-    Ve volném čase se věnuji digitální ilustraci a lukostřelbě.
   </p>
 
   
