--- a/projekty.html
+++ b/projekty.html
@@ -27,11 +27,12 @@ title: Iveta Círová - Projekty
             <h2 class="subtitle subtitle--projects">Lovecký zámeček Brendy</h2>
             <p class="badge">REACT</p>
             <div class="icons">
+                <a href="https://zamecek.hk-it.cz/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
                 <a href="https://github.com/icirova/hotel-lovecky-zamecek" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
             </div>
         </div>
 
-        <p class="card-description ">Responzivní webové stránky fiktivního hotelu. Projekt je napojen na databázi PostgreSql. Backend je napsaný v JavaScriptu s využitím frameworku Express.js. Bude nasaditelný v Dockeru - na tom ještě pracuji. Odkaz na backend na github <a href="https://github.com/icirova/hotel-lovecky-zamecek-BE" class="link">zde.</a></p>
+        <p class="card-description ">Responzivní webové stránky fiktivního hotelu. Projekt je napojen na databázi PostgreSql. Backend je napsaný v JavaScriptu s využitím frameworku Express.js. Je nasaditelný v Docker. Aktuálně běží v AWS Fargate. Odkaz na backend na github <a href="https://github.com/icirova/hotel-lovecky-zamecek-BE" class="link">zde.</a></p>
 
     </div>
 
