--- a/projekty.html
+++ b/projekty.html
@@ -27,7 +27,7 @@ title: Iveta Círová - Projekty
             <h2 class="subtitle subtitle--projects">Lovecký zámeček Brendy</h2>
             <p class="badge">REACT</p>
             <div class="icons">
-                <a href="https://zamecek.hk-it.cz/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
+                <a href="https://zamecek.cirova.cz/" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>
                 <a href="https://github.com/icirova/hotel-lovecky-zamecek" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="25px" /></a>
             </div>
         </div>
