odkaz na tragedium.cz

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ title: Iveta Círová
   </p>
 
   <p class="description">
+    Ve volném čase tvořím sci-fi povídky, které publikuji na svém webu <a href="https://tragedium.cz/" class="link">tragedium.cz</a>.
   </p>
 
   
