oprava linku u figma projektu

--- a/projekty.html
+++ b/projekty.html
@@ -89,7 +89,7 @@ title: Iveta Círová - Projekty
             <h2 class="subtitle subtitle--projects">Figma</h2>
             <p class="badge">UX/UI</p>
             <div class="icons">
-                <a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1 target=" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>  
+                <a href="https://www.figma.com/file/ADTgvgfrNiRQGPWiDM3AGg/Iveta-Ecom-V1?type=design&node-id=44%3A69&mode=design&t=exFeTuY8zL7wKcZM-1" target="_blank" rel="noopener" class="icon-link"><img src="/icons/link-icon.svg" alt="ikona odkazu" class="icon-image" width="25px"/></a>  
             </div>
         
             
