--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@ title: Iveta Círová
     Iveta Círová
   </h1>
 
-  <div class="badge badge--hero">QA &amp; Frontend</div>
+  <div class="hero__badges">
+  <div class="badge badge--hero">QA Engineer</div>
+  <div class="badge badge--hero">Frontend Developer</div>
+  </div>
 
-  <p class="hero__description">„Snaha je prvním krokem k úspěchu.”</p>
+  <p class="hero__description">AI-assisted development • JavaScript • TypeScript • React</p>
+
+  <p class="description">
+Vytvářím webové aplikace s důrazem na testovatelnost,
+čistý kód a efektivní vývoj. AI beru jako přirozenou součást
+každodenní práce.  </p>
 
   <div class="buttons">
-    <button id="btn-cv" class="btn"> CV</button>
     <button id="btn-projects" class="btn"> Projekty</button>
+    <button id="btn-cv" class="btn"> CV</button>
+    
   </div>
 
   <img
@@ -30,27 +39,91 @@ title: Iveta Círová
 <section class="about">
   <h2 class="subtitle subtitle--about">O mně</h2>
 
-  <p class="badge badge--about">JS, TS, REACT</p>
+  <!-- <p class="badge badge--about">JS, TS, REACT</p> -->
 
-  <p class="description">
+  <!--<p class="description">
     První zkušenosti v IT jsem získala manuálním
     <strong>testováním</strong> webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
     kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
     se seznámila s JavaScriptem. Byla jsem nadšená. Kromě QA jsem se tedy rozhodla zabývat také frontendovým vývojem. Začala jsem kurzem <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát.
-  </p>
+  </p><-->
+
   
+<p class="description">
+    K IT jsem se dostala přes manuální testování webů a e-shopů, kde jsem si vypěstovala cit pro kvalitu, detail a uživatelskou zkušenost.
+  </p>
+
   <p class="description">
+   Postupně jsem se začala více zajímat o automatizaci a frontendový
+vývoj. JavaScript mě nadchl natolik, že jsem se rozhodla jít cestou
+QA s přesahem do vývoje. Pracuji s TypeScriptem a Reactem a
+dlouhodobě si rozšiřuji technické znalosti.
+  </p>
+
+  <!--<p class="description">
     Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux. Začínám programovat v C# a na denně využívám AI - ChatGPT a Gemini.
-  </p>
+  </p>-->
 
-  <p class="description">
-    Mým cílem je stát se <strong>QA inženýrem</strong> s přesahem do <strong>frontendu</strong>. 
-  </p>
 
+</section>
+
+<section class="ai">
+  <h2 class="subtitle subtitle--ai">Jak pracuji s AI</h2>
+  
   <p class="description">
-    Ve volném čase tvořím sci-fi povídky, které publikuji na svém webu <a href="https://tragedium.cz/" class="link">tragedium.cz</a>.
+   AI používám jako každodenní pracovní nástroj, ne jako náhradu
+přemýšlení. Pomáhá mi pracovat efektivněji a soustředit se na
+logiku, kvalitu a čitelnost kódu.
   </p>
 
   
+  <ul class="ai-tools">
+  <li>
+    <strong>ChatGPT</strong> – návrh architektury, rozpad úloh,
+    vysvětlení konceptů
+  </li>
+  <li>
+    <strong>Gemini</strong> – alternativní pohledy, porovnání řešení
+  </li>
+  <li>
+    <strong>Cursor / Codex (VS Code)</strong> – rychlejší psaní kódu,
+    refactoring a hledání chyb
+  </li>
+</ul>
 
+  <p class="description">
+Díky AI dokážu jako junior vytvořit plnohodnotné aplikace,
+udržovat konzistentní kód a rychle se orientovat v nových
+technologiích.  </p>
+
+  
+
+</section>
+
+<section class="tech">
+  <h2 class="subtitle subtitle--tech">Technologie</h2>
+  
+  <p class="tech-line">
+    <strong>JavaScript</strong> • <strong>TypeScript</strong> • <strong>React</strong>
+  </p>
+  <p class="tech-line">
+    QA testing • <span class="accent">AI-assisted development</span>
+  </p>
+  <p class="tech-line">
+    <span class="muted">Základy:</span> Docker • GraphQL • C#
+  </p>
+
+</section>
+
+<section class="free-time" id="volny-cas">
+  <h2 class="subtitle subtitle--free">Volný čas</h2>
+
+  <p>
+    Ve volném čase píšu sci-fi povídky, které publikuji na webu
+    <a href="https://www.tragedium.cz" target="_blank" rel="noopener">
+      tragedium.cz
+    </a>.
+    Kreativní psaní mi pomáhá rozvíjet strukturované myšlení,
+    práci s komplexními systémy a důraz na detail.
+  </p>
 </section>
